--- a/extra_playbooks/fix-podsandbox-not-existing.yml
+++ b/extra_playbooks/fix-podsandbox-not-existing.yml
@@ -9,6 +9,7 @@
         mode: 0700
         content: |
           #!/bin/bash
+          export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/snap/bin
           container_id="$(journalctl -u kubelet --since "2 minute ago" -o cat -g 'no PodsandBox found with Id' -n1 | awk -F' ' '{print $NF}' | cut -c 2-14)"
           if [[ -z "${container_id}" ]]; then
             exit 0
